--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -2779,5 +2779,108 @@ stories:
   state: Florida
   domain: http://www.polkonline.com/
   link: https://www.polkonline.com/how-to-become-a-registered-nurse/
+images:
+- name: old-granary-field-oldhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gan-vogh.jpg
+- name: stories-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-clean-view.jpg
+- name: trucksilo-trucksilo-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-blocks.jpg
+- name: downtown-los-angeles-downtown-la-yellow-collage.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-collage.JPG
+- name: abandonedbuildings_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
+- name: meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+- name: beach-clouds-lifeguard-beachclouds-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-pablo-blue.jpg
+- name: white-house-lawn-white-house-window-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-neo-instinct.jpg
+- name: border-crossing-bordercrossing-light-dali.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-light-dali.png
+- name: amusement-park-amusement-park-2-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kandinsky-bv.jpg
+- name: stories-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-blue-circuit.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+- name: berlinwall2-berlinwall-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-monet-one.jpg
+- name: oldhotel-oldhotel-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-post-modern.jpg
+- name: legal-statue-legalstatue-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
+- name: gypsymosaic-gypsy-eyes-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-matrix.jpg
+- name: christianity-christianity-under-construction-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-alberto-giacometti.jpg
+- name: old-door-lock-old-door-lock-2-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-monet-one.jpg
+- name: store-on-corner-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-pond.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
+- name: liberty-back-statue-liberty-back-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-clean-view.jpg
+- name: trucksilo-trucksilo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-cinnamon-rolls.jpg
+- name: razorcliff-razorcliff-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-asteroids.jpg
+- name: old-door-lock-old-door-lock-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-emily-carr.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: oldtrain-oldtrain-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-hot-spicy.jpg
+- name: adam-smith-adam-smith-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-space-pizza.jpg
+- name: nazi-invasion-DSC_0020.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
+- name: supreme-court-supremecourt-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gan-vogh.jpg
+- name: server-cloud-server-racks-door-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-satan-red.jpg
+- name: store-on-corner-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-bright-sand.jpg
+- name: locked-up-steam-lock-up-steam-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-dali.jpg
+- name: store-on-corner-oldcabin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-dresden.jpg
+- name: window-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
+- name: downtown-trucksilo-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colorful-dream.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+- name: old-granary-field-oldhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-creativity.jpg
+- name: amusement-park-amusement-park-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-atari-asteroids.jpg
+- name: subway-subway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway.jpg
+- name: old-door-lock-old-door-lock-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-really-hot.jpg
+- name: curtain-curtain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crabapple.jpg
+- name: oldsmallboat-oldsmallboat-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
+- name: cannon-wall-satan.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-wall-satan.jpg
+- name: adam-smith-adam-smith-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-horiz-circuit.jpg
+- name: aws-s3-stories-losangeles-from-observatory-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-free-woman.jpg
+- name: old-cabin-oldcabin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-marcel-duchamp.jpg
+- name: flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
+- name: castle-wall-DSC-0067-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-yellow-paper.JPG
+- name: abandonedbuildings_wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_wols.jpg
+- name: white-house-lawn-white-house-lawn-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-spagetti-accident.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
 ---
 Nestucca Valley Backpack Program Hosts 10th Anniversary Fundraiser.&nbsp;Sam's Field First Season.&nbsp;Towns In Six Vermont Counties Now Eligible For Federal Aid For Flooding Damage.&nbsp;Order Past Editions Of Our Special Publications.&nbsp;Extract Metadata From Existing Bibliographic Resources.&nbsp;More Major Artifacts Added As National Army Museum Takes Shape.&nbsp;Amazon, Microsoft Wage War Over The Pentagon's 'war Cloud'.&nbsp;Noyo Fireworks Show Delivers.&nbsp;
